# winit-up-to-date-simple-example

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cmd.rs  main.rs  shader.wgsl
src/window/: mod.rs
