[package]
name = "rv-emu-ui"
version = "0.1.0"
edition = "2021"
license = "mit"
authors = ["Philippe Anel"]
repository = "https://github.com/xigh/winit-up-to-date-simple-example"

[dependencies]
winit = "0.30.11"
anyhow = "1.0.81"
softbuffer = "0.4.6"
pollster = "0.4.0"
wgpu = "25.0.2"
bytemuck = "1.23.1"
image = "0.25.6"
